sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {

 var p:Int = getNombreValeurs() 
	
	while(p!=0){
	for (k<-0 to p-2){
		if(plusPetitQue(k+1,k) ){
		echange(j,j-1)
		p = p - 1
		
	}
}
}
}

